Navbar closes on click. Image overflow fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -33,14 +33,20 @@ body {
 }
 
 .logo-container {
-  height: 0.5em;
+  height: 0.1em;
 }
 
 .bg-pic {
-  position: absolute;
+  position: relative;
   z-index: -1;
   width: 100%;
   height: auto;
+}
+
+.crop {
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
 }
 
 a {
@@ -53,6 +59,10 @@ a {
 
 .small-distance {
   height: 6.5em;
+}
+
+.fill {
+  height: 16rem;
 }
 
 .logo-link {
